# anki_languages_cli

./: Cargo.toml  LICENSE  README.md  config.toml
src/: anki.rs  config.rs  main.rs
src/models/: add_notes.rs  create_deck.rs  deck_name.rs  find_notes.rs
src/traits/: to_string_json.rs
src/utils/: anki.rs  translation.rs
