[package]
name = "anki_languages_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.2"
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"
serde = {version = "1.0.163", features = ["derive"]}
log = "0.4.17"
pretty_env_logger = "0.5.0"